--- a/ANsible/20250520Ansible실습2.md
+++ b/ANsible/20250520Ansible실습2.md
@@ -41,3 +41,38 @@ The key's randomart image is:
 +----[SHA256]-----+
 ```
 ### 관리 노드(Ansible Node 서버들)로 복사
+
+
+### 첫 번째 플레이북 작성하기
+#### 플레이북 작성하기
+(ansible-rocky810)# cd /root/my-ansible
+(ansible-rocky810)# vi first-playbook.yml
+
+![](./img/20250521/0001.png)
+
+#### 플레이북 문법 체크하기
+
+![](./img/20250521/0002.png)
+
+#### 플레이북 실행 점검하기
+
+##### Step 1. 'sshd 서비스' 를 위한 '파일(restart-service.yml)' 생성
+
+##### Step 2. 각 'Node Server'에서 'sshd' 서비스(데몬) 실행 하기 전에 'check'
+
+![](./img/20250521/0003.png)
+
+##### Step 3. 각 'Node Server'에서 'sshd' 서비스(데몬) 실행
+
+![](./img/20250521/0004.png)
+```
+systemctl enable ssh ---> 우분투에서
+```
+![](./img/20250521/0005.png)
+
+
+
+##### Step 4. 
+
+##### Step 5. 
+
