--- a/ANsible/20250520Ansible실습1.md
+++ b/ANsible/20250520Ansible실습1.md
@@ -85,7 +85,7 @@
 ```
 sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-*
 sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g' /etc/yum.repos.d/CentOS-*
-yum -y install epel-realease
+yum -y install epel-release
 ```
 
 - Ansible 설치
