--- a/ANsible/20250522Ansible조건문.md
+++ b/ANsible/20250522Ansible조건문.md
@@ -111,4 +111,164 @@
 ![](./img/20250522/0027.png)
 
 
+# 복수 조건문(다중 조건문)
 
+## 개요
+- 조건문안에 또다른 조건문이 포함된 형태
+
+### Step 1. 파일 복사 후 수정 1. OR
+
+#### /root/my-ansible/check-os1.yml
+```
+---
+
+- hosts: all
+
+
+  tasks:
+    - name: Print os type
+      ansible.builtin.debug:
+        msg: "OS Type: {{ ansible_facts['distribution'] }}"
+      when: ansible_facts['distribution'] == "Rocky" or ansible_facts['distribution'] == "Ubuntu"
+```
+### Step 2. 플레이북 실행
+![](./img/20250523/0001.png)
+
+### Step 3. 파일 복사 후 수정 2. and
+
+#### /root/my-ansible/check-os2.yml
+
+```
+---
+
+- hosts: all
+
+
+  tasks:
+    - name: Print os type
+      ansible.builtin.debug:
+        msg: >
+             OS Type: {{ ansible_facts['distribution'] }}
+             OS Version: {{ ansible_facts['distribution_version'] }}
+      when: ansible_facts['distribution'] == "CentOS" and ansible_facts['distribution'] == "8"
+```
+
+### 번외 OR
+
+```
+---
+
+- hosts: all
+
+
+  tasks:
+    - name: Print os type
+      ansible.builtin.debug:
+        msg: >
+             OS Type: {{ ansible_facts['distribution'] }}
+             OS Version: {{ ansible_facts['distribution_version'] }}
+      when: ansible_facts['distribution'] == "Rocky" or ansible_facts['distribution'] == "8"
+```
+
+### Step 4. 플레이북 실행
+
+![](./img/20250523/0002.png)
+
+
+
+### Step 5. 파일 수정, 사전 이용
+#### /root/my-ansible/check-os3.yml
+```
+---
+
+- hosts: all
+
+
+  tasks:
+    - name: Print os type
+      ansible.builtin.debug:
+        msg: >
+             OS Type: {{ ansible_facts['distribution'] }}
+             OS Version: {{ ansible_facts['distribution_version'] }}
+      when:
+        - ansible_facts['distribution'] == "Rocky"
+        - ansible_facts['distribution_version'] == "8.10"
+```
+
+### Step 6. 플레이북 실행
+
+![](./img/20250523/0003.png)
+
+### Step 7. 파일수정
+
+#### /root/my-ansible/check-os4.yml
+
+```
+---
+
+- hosts: all
+
+
+  tasks:
+    - name: Print os type
+      ansible.builtin.debug:
+        msg: >
+             OS Type: {{ ansible_facts['distribution'] }}
+             OS Version: {{ ansible_facts['distribution_version'] }}
+      when: >
+          ( ansible_facts['distribution'] == "Rocky" and
+            ansible_facts['distribution_version'] == "8.10" )
+          or
+          ( ansible_facts['distribution'] == "Ubunut" and
+            ansible_facts['distribution_version'] == "24.04" )
+```
+
+### Step 8. 플레이북 실행
+![](./img/20250523/0004.png)
+
+
+# 반복문과 조건문
+
+## 개요
+
+### Step 1. 파티션 용량
+#### /root/my-ansible/check-mount
+```
+---
+
+- hosts: db
+
+
+  tasks:
+    - name: Print Root Directory Size
+      ansible.builtin.debug:
+        msg: "Directory {{ item.mount }} size is {{ item.size_available }}"
+      loop: "{{ ansible_facts['mounts'] }}"
+      when: item['mount'] == "/" and item['size_available'] > 300000000
+```
+
+### Step 2. 플레이북 실행
+
+![](./img/20250523/0005.png)
+
+### Step 3. 'register' 키워드를 이용한 작업변수
+#### /root/my-ansible/register-when.yml
+```
+---
+
+- hosts: all
+
+  tasks:
+    - name: Get rsyslog service status
+      ansible.builtin.command: systemctl is-active rsyslog
+      register: result
+
+
+    - name: Print rsyslog status
+      ansible.builtin.debug:
+        msg: "Rsyslog status is {{ result.stdout }}"
+      when: result.stdout == "active"
+```
+### Step 4. 플레이북 실행
+
+![](./img/20250523/0006.png)
