--- a/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
+++ b/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
@@ -1,1 +1,101 @@
 # 📦 Docker (도커)
+
+## 1. 'Docker Engine' 설치를 위한 가상머신 설치
+
+### 매우 중요
+- 'Hyper-V'를 반드시 제거해야 한다.
+
+
+
+### Ubuntu 설치
+```
+해시합 안맞을경우
+sudo rm -rf /var/lib/apt/lists/*
+sudo apt update
+sudo apt upgrade
+```
+### 관련 패키지 설치
+
+### 'Docker Engine' 설치
+
+```
+sudo apt install apt-transport-https ca-certificates curl gnupg-agent software-properties-common
+```
+
+### GPG(암호화, 소프트웨어 등의 무결성 검증)키 설치
+
+```
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+```
+### 공식 저장소 추가
+```
+sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+```
+
+### 시스템 업데이트
+```
+sudo apt update
+sudo apt upgrade
+```
+
+### 도커 확인 및 설치
+
+```
+sudo apt install docker-ce docker-ce-cli containerd.io
+```
+
+![](./img/20250523.img/0001.png)
+```
+sudo docker -v
+sudo dpkg -l | grep docker
+sudo ps -ef | grep docker
+```
+
+### 테스트
+#### 도커 이미지를 이용해서 컨테이너를 생성
+
+![](./img/20250523.img/0002.png)
+#### 도커 컨테이너를 삭제 1. 오류
+
+![](./img/20250523.img/0003.png)
+
+#### 도커 컨테이너 확인
+
+- 활성 상태인 컨테이너 확인
+- 활성/비활성 상태인 컨테이너 모두 확인
+
+![](./img/20250523.img/0004.png)
+
+여기서 활성화가 되어 있다.
+
+#### 도커 컨테이너를 삭제 2. 정상
+
+![](./img/20250523.img/0005.png)
+```
+sudo docker rm quizzical_bell   --> 데몬 지우기
+sudo docker ps -a   --> 확인
+```
+
+![](./img/20250523.img/0006.png)
+```
+sudo docker rmi hello-world  --> 삭제
+sudo docker images  --> 확인
+```
+- 백그라운드 실행 확인
+
+![](./img/20250523.img/0007.png)
+
+![](./img/20250523.img/0008.png)
+
+## 2. 'Docker' 명령어
+- 이미지 관련 명령어
+
+- search
+    - 개요
+        - Docker Hub에서 이미지를 검색한다.
+    - 문법
+        - docker search <이미지명>:[태그]
+    - 실습
+        ![](./img/20250523.img/0009.png)
+        centos OFFICIAL [ok] 공식이미지
+    
