--- a/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
+++ b/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
@@ -98,4 +98,57 @@ sudo docker images  --> 확인
     - 실습
         ![](./img/20250523.img/0009.png)
         centos OFFICIAL [ok] 공식이미지
-    
+        ![](./img/20250523.img/0010.png)
+
+        ![](./img/20250523.img/0011.png)
+
+        ![](./img/20250523.img/0012.png)
+
+- Images
+    - 개요
+        - 이미지를 다운로드한다.
+    - 문법
+        - docker pull <이미지명>:[태그]
+    - 실습
+
+
+
+
+
+
+
+
+
+
+- Images
+    - 개요
+
+    - 문법
+
+    - 실습
+
+
+
+
+
+
+
+
+
+
+
+
+
+- Images
+    - 개요
+
+    - 문법
+
+    - 실습
+
+- Images
+    - 개요
+
+    - 문법
+
+    - 실습
