--- a/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
+++ b/CIC(Container Infrastructure Configuration)/20250523_01.도커.md
@@ -88,7 +88,7 @@ sudo docker images  --> 확인
 ![](./img/20250523.img/0008.png)
 
 ## 2. 'Docker' 명령어
-- 이미지 관련 명령어
+### 이미지 관련 명령어
 
 - search
     - 개요
@@ -104,51 +104,140 @@ sudo docker images  --> 확인
 
         ![](./img/20250523.img/0012.png)
 
-- Images
+- images
+    - 개요
+        - 현재 다운로드한 이미지 목록을 확인한다.
+    - 문법
+        - docker images
+
+- pull
     - 개요
         - 이미지를 다운로드한다.
     - 문법
         - docker pull <이미지명>:[태그]
     - 실습
+    
+        ![](./img/20250523.img/0013.png)
+        ```
+        sudo docker pull centos7
+        ```
+        ![](./img/20250523.img/0014.png)
+        ```
+        sudo docker pull ubuntu:24.04
+        ```
+        ![](./img/20250523.img/0015.png)
 
-
-
-
-
-
-
-
-
-
-- Images
+- rmi
     - 개요
-
+        - 이미지를 삭제한다.
     - 문법
+        - docker rmi <이미지명>:[태그]
+    - 실습
+        ![](./img/20250523.img/0016.png)
+
+        ![](./img/20250523.img/0017.png)
+
+### 컨테이너 관련 명령어
+- run
+    - 개요
+        - 이미지를 이용해서 컨테이너를 생성한다.
+        - 기본적으로 컨테이너 생성과 동시에 컨테이너 안에 접속
+    - 문법
+        - docker run <옵션1><서브옵션1> <옵션2><서브옵션2> ...
+        - name <원하는 컨테이너명><이미지명>:[태그] <명령어>
+    - 실습
+        - -i (Interactive)
+        - -t (Pseudo-tty, 가상터미널)
+        - --name (컨테이너 이름, 없으면 도커가 자동 지정)
+        - 명령어 (일반적으로 'shell'을 지정)
+
+        ![](./img/20250523.img/0018.png)
+
+- ps
+    - 개요
+        - 활성 및 비활성 상태의 컨테이너를 모두 출력한다.
+    - 문법
+        - docker ps
+        - docker ps -a
+    - 실습
+
+        ![](./img/20250523.img/0019.png)
+
+
+- create
+    - 개요
+        - 컨테이너를 생성한다. 도커 접속 x
+    - 문법
+        - docker create <옵션1><서브옵션1> <옵션2><서브옵션2> ...
+        - --name <원하는 컨테이너명><이미지명>:[태그] <명령어>
+    - 실습
+
+    ![](./img/20250523.img/0020.png)
+
+
+
+- rm
+    - 개요
+        - 컨테이너를 삭제한다.
+    - 문법
+        - docker rm [CONTAINER ID]
+        - docker rm [NAMES]
 
     - 실습
 
+        ![](./img/20250523.img/0021.png)
 
 
-
-
-
-
-
-
-
-
-
-
-- Images
+- start, restart, stop
     - 개요
-
+        - 컨테이너를 실행(활성화), 재실행, 중지(비활성화) 시킨다.
     - 문법
-
+        - docker start/restart/stop [CONTAINER ID]
+        - docker start/restart/stop [NAMES]
     - 실습
 
-- Images
+    ![](./img/20250523.img/0022.png)
+
+- attach
     - 개요
-
+        - 컨테이너에 접속한다.
     - 문법
-
+        - docker attach [CONTAINER NAMES]
     - 실습
+
+    ![](./img/20250523.img/0023.png)
+
+    ![](./img/20250523.img/0024.png)
+
+- exec
+    - 개요
+        - 현재 설정된 로컬이 아닌 외부 접속으로 컨테이너 안의 명령을 실행
+    - 문법
+        - docker exec [CONTAINER NAMES] <명령> <매개변수>
+    - 실습
+
+    ![](./img/20250523.img/0025.png)
+
+### 'Docker Container'를 이용한 이미지 생성
+
+#### 사용자가 생성한 'Docker Container'를 이용한 'Docker Image' 생성
+#### 앞에서 작업했던 이미지, 컨테이너 모두 제거
+
+#### 사전작업
+- 이미지 검색하고 다운로드
+    - docker search centos:7
+    - docker pull centos:7
+- 컨테이너 생성
+    - docker run -it --name samdocker centos:7 /bin/bash
+- 도커로 들어간 후 필요한 패키지를 모두 설치한다.
+    - 여기서는 '커널 업데이트'만 하고 빠져 나온다. (^ + p + q)
+- 확인
+- 이미지생성
+- 생성한 이미지를 이용한 컨테이너 생성
+
+
+### s
+```
+sudo docker pull nginx
+sudo docker run -itd --name nginx
+```
