도커db pull, push

--- a/CIC(Container Infrastructure Configuration)/20250526_02.도커.md
+++ b/CIC(Container Infrastructure Configuration)/20250526_02.도커.md
@@ -1,13 +1,13 @@
 # Docker (도커)
 ## 5. 실습
 ### 개요
-#### '임의의 서비스(mariadb)'가 동작되는 컨테이너를 생성한다.
+#### 1. '임의의 서비스(mariadb)'가 동작되는 컨테이너를 생성한다.
 - 관련 패키지를 설치하고 사용자를 생성한다.
 - 관리자, 사용자 테스트
-#### 이 컨테이너를 이미지로 생성한 후 도커 허브에 업로드 한다.
-#### 로컬에 있는 컨테이너를 모두 삭제한다.
-#### 도커 허브에 올려놓은 이미지를 다운로드 한 후 컨테이너를 활성화 한다.
-#### 앞에서 작업한 사용자들(root, usersamadal)로 로그인이 되는지 확인한다.
+#### 2. 이 컨테이너를 이미지로 생성한 후 도커 허브에 업로드 한다.
+#### 3. 로컬에 있는 컨테이너를 모두 삭제한다.
+#### 4. 도커 허브에 올려놓은 이미지를 다운로드 한 후 컨테이너를 활성화 한다.
+#### 5. 앞에서 작업한 사용자들(root, usersamadal)로 로그인이 되는지 확인한다.
 
 
 
