도커 아파치

--- a/CIC(Container Infrastructure Configuration)/20250526_03.도커 네트워크.md
+++ b/CIC(Container Infrastructure Configuration)/20250526_03.도커 네트워크.md
@@ -124,6 +124,7 @@ yum -y install openssh-*
 
 ##### SSH 접속
 
+겹쳐있는 키 삭제
 ```
 sudo ssh-keygen -f '/root/.ssh/known_hosts' -R '172.17.0.2'
 ```
@@ -133,24 +134,19 @@ sudo ssh-keygen -f '/root/.ssh/known_hosts' -R '172.17.0.2'
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ### 호스트 시스템에서 SSH를 이용한 컨테이너 접속 3. 신규 터니멀 (호스트 시스템)
+
+- 기본 작업
+    - 등록된 도커 이미지 및 컨테이너 확인
+
+![](./img/20250527.img/0001.png)
+
+- docker에서 ubuntu 접속
+
+![](./img/20250527.img/0002.png)
+
+![](./img/20250527.img/0003.png)
+
+![](./img/20250527.img/0004.png)
+
+원격으로 접속한 곳에서 실행중인 컨테이너를 확인해보면 up이라고 되어있음
