--- a/CIC(Container Infrastructure Configuration)/20250528_05.도커 DNS.md
+++ b/CIC(Container Infrastructure Configuration)/20250528_05.도커 DNS.md
@@ -39,7 +39,7 @@ vi /etc/named.rfc1912.zones
 ![](./img/20250528.img/0005.png)
 
 ```
-vi /etc/named/gusiya.com.zone
+vi /var/named/gusiya.com.zone
 
 $TTL 1D
 @       IN SOA  ns.gusiya.com. root.gusiya.com. (
@@ -58,16 +58,16 @@ www     IN      A       172.17.0.2
 ![](./img/20250528.img/0006.png)
 
 ```
-vi /etc/named/gusiya.com.rev
+vi /var/named/gusiya.com.rev
 
 $TTL 1D
-@       IN SOA  ns.gusiya.com.com. root.gusiya.com.com. (
+@       IN SOA  ns.gusiya.com. root.gusiya.com. (
                                         0       ; serial
                                         1D      ; refresh
                                         1H      ; retry
                                         1W      ; expire
                                         3H )    ; minimum
-        IN      NS      ns.gusiya.com.com.
+        IN      NS      ns.gusiya.com.
         IN      A       172.17.0.4
 
 4     IN      PTR     ns.gusiya.com.
@@ -75,6 +75,10 @@ $TTL 1D
 ```
 
 ```
+[root@4bbbf9cd454c named]# chmod 660 gusiya.*
+[root@4bbbf9cd454c named]#
+[root@4bbbf9cd454c named]# chown .named gusiya.*
+[root@4bbbf9cd454c named]#
 [root@4bbbf9cd454c named]# systemctl restart named
 [root@4bbbf9cd454c named]#
 [root@4bbbf9cd454c named]# systemctl restart httpd
