--- a/CIC(Container Infrastructure Configuration)/20250530_01.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250530_01.쿠버네티스.md
@@ -128,3 +128,145 @@ C:\HashiCorp>vagrant init
 `Vagrantfile` already exists in this directory. Remove it before
 running `vagrant init`.
 ```
+
+![](./img/20250530.img/0001.png)
+
+### Step 2. 'Vagrantfile' 파일의 내용을 확인
+### Step 3. 프로비저닝 작업 (오류 발생)
+
+![](./img/20250530.img/0002.png)
+
+### Step 4. 'OS Image' 선택
+
+### Step 5. Vagrantfile 파일의 내용을 수정
+![](./img/20250530.img/0003.png)
+
+### Step 6. 'OS Image' 다운로드 확인
+![](./img/20250530.img/0005.png)
+### Step 7. 가상 머신이 생성되었는지 확인하고 SSH.를 이용한 원격 접속
+
+![](./img/20250530.img/0006.png)
+
+### Step 8. 설치가 정상적으로 되었는지 확인
+![](./img/20250530.img/0004.png)
+
+### Step 9. 제거
+![](./img/20250530.img/0007.png)
+![](./img/20250530.img/0008.png)
+
+## 'Vagrant File'을 이용한 테스트 환경 구축
+
+- 가상 머신에 필요한 설정 등을 파일을 이용해서 자동으로 적용되는 가상 머신 생성
+
+```
+# -*- mode: ruby -*-
+# vi: set ft=ruby :
+Vagrant.configure("2") do |config| 
+  config.vm.define "m-k8s" do |cfg|
+    cfg.vm.box = "sysnet4admin/CentOS-k8s"
+    cfg.vm.provider "virtualbox" do |vb|
+      vb.name = "m-k8s(github_SysNet4Admin)"
+      vb.cpus = 2
+      vb.memory = 2048
+      vb.customize ["modifyvm", :id, "--groups", "/k8s-SM(github_SysNet4Admin)"]
+    end
+    cfg.vm.host_name = "m-k8s"
+    cfg.vm.network "private_network", ip: "192.168.1.10"
+    cfg.vm.network "forwarded_port", guest: 22, host: 60010, auto_correct: true, id: "ssh"
+    cfg.vm.synced_folder "../data", "/vagrant", disabled: true
+  end
+end
+```
+
+![](./img/20250530.img/0010.png)
+
+![](./img/20250530.img/0011.png)
+
+![](./img/20250530.img/0012.png)
+
+![](./img/20250530.img/0013.png)
+
+## 다음
+
+![](./img/20250530.img/0014.png)
+
+install_pkg.sh
+```
+#!/usr/bin/env bash
+
+# install packages 
+yum install epel-release -y
+```
+ping_2_nds.sh
+```
+# ping 3 times per nodes
+ping 192.168.1.101 -c 3
+ping 192.168.1.102 -c 3
+ping 192.168.1.103 -c 3
+```
+config.sh
+```
+#!/usr/bin/env bash
+# modify permission  
+chmod 744 ./ping_2_nds.sh
+```
+
+Vagrantfile
+```
+# -*- mode: ruby -*-
+# vi: set ft=ruby :
+
+Vagrant.configure("2") do |config| 
+  config.vm.define "m-k8s" do |cfg|
+    cfg.vm.box = "rockylinux/9"
+    cfg.vm.provider "virtualbox" do |vb|
+      vb.name = "m-k8s(clouddx_rockylinux9)"
+      vb.cpus = 2
+      vb.memory = 2048
+      vb.customize ["modifyvm", :id, "--groups", "/k8s-SM(clouddx_rockylinux9)"]
+    end
+    cfg.vm.host_name = "m-k8s"
+    cfg.vm.network "private_network", ip: "192.168.1.10"
+    cfg.vm.network "forwarded_port", guest: 22, host: 60010, auto_correct: true, id: "ssh"
+    cfg.vm.synced_folder "../data", "/vagrant", disabled: true   
+    cfg.vm.provision "shell", path: "install_pkg.sh"
+    cfg.vm.provision "file", source: "ping_2_nds.sh", destination: "ping_2_nds.sh"
+    cfg.vm.provision "shell", path: "config.sh"
+  end
+  
+  #=============#
+  # Added Nodes #
+  #=============#
+
+  (1..3).each do |i|
+    config.vm.define "w#{i}-k8s" do |cfg|
+      cfg.vm.box = "rockylinux/9"
+      cfg.vm.provider "virtualbox" do |vb|
+        vb.name = "w#{i}-k8s(clouddx_rockylinux9)"
+        vb.cpus = 1
+        vb.memory = 1024
+        vb.customize ["modifyvm", :id, "--groups", "/k8s-SM(clouddx_rockylinux9)"]
+      end
+      cfg.vm.host_name = "w#{i}-k8s"
+      cfg.vm.network "private_network", ip: "192.168.1.10#{i}"
+      cfg.vm.network "forwarded_port", guest: 22, host: "6010#{i}",auto_correct: true, id: "ssh"
+      cfg.vm.synced_folder "../data", "/vagrant", disabled: true
+      cfg.vm.provision "shell", path: "install_pkg.sh"
+    end
+  end
+end
+```
+![](./img/20250530.img/0015.png)
+
+```
+vagrant provision
+```
+
+공식 이미지
+![](./img/20250530.img/0016.png)
+
+![](./img/20250530.img/0017.png)
+
+```
+vagrant -f destroy
+```
