쿠버 네티스

--- a/CIC(Container Infrastructure Configuration)/20250602_03.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250602_03.쿠버네티스.md
@@ -87,4 +87,64 @@ STATUS 부분이 pending 으로 되어있으면 안된다.
 
 - 'coredns' 중간에 66bff467f8 이라는 문자열이 있는데 이것을 ReplicatSe'레플리카'을 무작위 문자열로 변형태 추가한 것이다.
 
+## 📦 Kubernetes Pods 배포 시 통신 흐름 및 구성 요소 정리
 
+### ✅ Step 1 ~ Step 8: 기본 설정으로 배포된 Kubernetes의 통신 흐름
+
+#### 🧠 Master Node
+
+- **Step 1. `kubectl`**
+  - Kubernetes 클러스터에 명령을 내리는 CLI 도구
+  - 바이너리 형태로 배포되어 API 서버와 직접 통신
+  - 보통 Master Node에서 실행됨
+
+- **Step 2. API 서버**
+  - Kubernetes 클러스터의 중앙 통신 허브
+  - etcd, Controller Manager, Scheduler 등 모든 컴포넌트와 통신
+  - 클러스터의 상태를 일괄적으로 관리함
+
+- **Step 3. `etcd`**
+  - 클러스터 내 구성 요소들의 상태값 저장소
+  - “/etc”와 “distributed”의 합성어로, 분산형 구성 정보 저장소
+  - 유일한 상태 저장소로, 백업만으로 클러스터 복구 가능
+
+- **Step 4. Controller Manager**
+  - Object(Pod, Node 등)의 상태를 관리
+  - Node 상태 이상 시 Node Controller가 감지 및 복구 수행
+
+- **Step 5. Scheduler**
+  - 노드의 자원, 조건, 레이블 등을 고려해 Pod의 배치 결정
+  - 어떤 Worker Node에 Pod를 할당할지 결정하는 컴포넌트
+
+---
+
+#### 🛠 Worker Node
+
+- **Step 6. Kubelet**
+  - Master Node로부터 전달받은 Pod의 명세를 실행
+  - 컨테이너가 정상 작동하는지 상태를 모니터링
+
+- **Step 7. CRI (Container Runtime Interface)**
+  - 실제 컨테이너를 실행하는 표준 인터페이스
+  - Docker, containerd, CRI-O 등이 사용됨
+
+- **Step 8. Pod**
+  - 한 개 이상의 컨테이너로 구성된 최소 실행 단위
+  - 단일 목적의 작업 단위로 설계됨
+
+---
+
+### 🔧 선택 구성 요소
+
+- **Network Plug-in**
+  - 클러스터 내 Pod 간 통신을 위한 네트워크 기능 제공
+  - 보통 **CNI (Container Network Interface)** 방식 사용
+
+- **CNI**
+  - 컨테이너 네트워크 표준 인터페이스
+  - 네트워크 안정성과 확장성 제공
+  - 대표 CNI: **Calico**, **Cilium**
+
+- **CoreDNS**
+  - 클러스터 내부의 DNS 요청을 처리
+  - Pod 간 도메인 이름으로 통신 가능하게 함
