쿠버 로드벨런싱

--- a/CIC(Container Infrastructure Configuration)/20250610_10.쿠버네티스.md
+++ b/CIC(Container Infrastructure Configuration)/20250610_10.쿠버네티스.md
@@ -9,3 +9,83 @@
 
 #### Step 1. Deployment를 이용해서 2개의 Pod(lb-hname-pods, lb-ip-pods)를 생성한다.
 
+#### Step 2. 6개의 Pod 확인
+
+![](./img/20250610.img/0001.png)
+
+#### Step 3. 사전에 정의되어 있는 'metallb.yaml' 파일을 이용해서 'MetalLB' 를 구성
+
+![](./img/20250610.img/0002.png)
+
+![](./img/20250610.img/0003.png)
+
+#### Step 4. 배포(running)된 'MetalLB'의 'Pod'가 '5개'인지를 확인하고 'IP'와 '상태'도 확인
+
+#### Step 5. Ingress와 마찬가지로 'MetalLB'도 설정을 적용해야 한다.
+
+![](./img/20250610.img/0004.png)
+
+#### Step 6. ConfigMap이 생성되었는지 확인한다.
+
+![](./img/20250610.img/0005.png)
+
+#### Step 7. 'MetalLB' 설정이 올바르게 적용되었는지 확인 
+
+![](./img/20250610.img/0006.png)
+![](./img/20250610.img/0007.png)
+
+#### Step 8. 각 Deployment(lb-hname-pods, lb-ip-pods)를 'LoadBalancer Service'로 노출한다. 
+
+```
+kubectl expose deployment lb-hname-pods --type=LoadBalancer --name=lb-hname-svc --port=80
+
+kubectl expose deployment lb-ip-pods --type=LoadBalancer --name=lb-ip-svc --port=80
+```
+
+#### Step 9. 생성된 'LoadBalancer service' 별로 'CLUSTER-IP'와 'EXTERNAL-IP'가 잘 적용되었는지 확인한다.
+
+![](./img/20250610.img/0008.png)
+
+#### Step 10. 'EXTERNAL-IP'가 잘 작동하는지 확인(http://192.168.1.11)
+
+![](./img/20250610.img/0009.png)
+
+#### Step 11. 'Pod'에 요청 방법과 IP가 표시되는지 확인(http://192.168.1.12)
+
+![](./img/20250610.img/0010.png)
+
+#### Step 12. Powershell을 통해 스크립트를 실행한다.
+- 개요
+    - 'LoadBalancer'가 정상적으로 동작하면 'http://192.168.1.11'에서 반복인 결과값 출력
+
+- 실행 
+
+![](./img/20250610.img/0011.png)
+
+```
+PS C:\Users\CloudDX> $i=0; while($true)
+>> {
+>> % {$i++; write-host -NoNewline "$i $_" }
+>> (Invoke-RestMethod "http://192.168.1.11")-replace '\n', " "
+>> }
+```
+![](./img/20250610.img/0012.png)
+
+![](./img/20250610.img/0013.png)
+
+![](./img/20250610.img/0014.png)
+
+#### Step 13. Pod를 6개로 늘린다.
+
+```
+kubectl scale deployment lb-hname-pods --replicas=6
+```
+
+![](./img/20250610.img/0015.png)
+
+#### Step 14. 늘어난 Pod 6개도 'EXTERNAL-IP'를 통해 접근되는지 확인 한다.
+
+#### Step 15. 'MetalLB'를 제외한 모든 'Pods'와 'Service'를 삭제한다.
+
+![](./img/20250610.img/0016.png)
+이거 두개 빼고 모두 삭제
